--- a/SimpleWeb/Views/Home/Index.cshtml
+++ b/SimpleWeb/Views/Home/Index.cshtml
@@ -4,6 +4,7 @@
 
 <div class="jumbotron">
     <h1>HELLO - MY NAME IS APPLE</h1>
+    <p><h2> this is for QA</h2></p>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
